# mms-cardiac-segmentation

./: .gitignore  README.md  pyproject.toml  requirements.txt
nnunet/: README.md
scripts/: exp002_preprocessing.py  exp003_train_unet.py  exp004_vendor_shift.py  exp005_augmentation.py  mnms_analyze_all.py  mnms_first_step.py
tests/: test_exp005_augmentation.py
unet/: exp002_preprocessing.py  exp003_train_unet.py  exp004_vendor_shift.py  exp005_augmentation.py  mnms_analyze_all.py  mnms_first_step.py
